--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -2,10 +2,11 @@ body {
   line-height: 1.5;
   font-size: 100%;
   color: #B7B7B7;
-  background-color: #707070;
+  background-color: #1A1A1A;
 }
 
 main {
+  clear: both;
   margin: auto;
   width: 90%;
 }
