--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -13,6 +13,7 @@ main {
 
 /*LINKS*/
 a, a:link, a:active {
+  font-family: 'Nixie One';
   text-decoration: none;
   color: #607625;
 }
@@ -22,5 +23,5 @@ a:hover, a:focus {
 }
 
 a:visited {
-  color: #832F24;
+  color: #607625;
 }
