--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,19 +1,28 @@
 #mini-menu {
+  margin-top: 1em;
   margin-right: 1em;
   color: #607625;
   font-size: 2em;
+  float:right;
 }
 
 .main-nav {
   padding: 0.1em;
-  float: right;
+  /*float: right;*/
+}
+
+.main-nav h2 {
+  margin-left: 1em;
+  display: none;
+  float: left;
 }
 
 .main-nav ul {
+  margin-right: 1em;
   display: none;
   padding: 0;
   list-style: none;
-  clear: both;
+  float: right;
 }
 
 .main-nav:hover ul {
@@ -25,19 +34,20 @@
   font-size: 1.5em;
   padding: .5em .2em;
   border-bottom: 1px solid #ccc;
-  color: #bc170f;
+  color: #607625;
 }
 
 .logo{
   text-align: center;
 }
 
+
 .neon {
   text-align: center;
-  font-size: 7em;
+  font-size: 5em;
   margin: 20px 0 20px 0;
   color: #FF1177;
-  font-family: Pacifico;
+  font-family: 'Quicksand';
 }
 
 .neon a {
@@ -66,6 +76,7 @@
 
 
 
+
 .profPic{
 max-width: 20%;
 max-height: 20%;
@@ -86,6 +97,13 @@ footer {
 
   .main-nav {
     padding: .2em .2em .2em 2em;
+    display: inline;
+  }
+
+  .main-nav h2 {
+    display: inline-block;
+    /*float: left;*/
+    font-family: 'Nixie One';
   }
 
   .main-nav ul {
@@ -95,7 +113,7 @@ footer {
   .main-nav ul li {
     display: inline;
     border-bottom: none;
-    color: #B7B7B7;
+    color: #607625;
   }
 
   .main-nav ul li:hover a {
