--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,6 +32,7 @@
     font-family: Arial, sans-serif;
     background: #fff;
     padding: 10px;
+    color: black; 
     margin: 10px;
     border: 3px solid #000;
   }
