--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -14,6 +14,15 @@ main {
   width: 90%;
 }
 
+.main-nav h2 {
+  font-size: 1.7em;
+  font-weight: bold;
+}
+
+p {
+  font-size: 1.5em;
+}
+
 /*LINKS*/
 a, a:link, a:active {
   font-family: 'Nixie One';
