--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,9 +31,11 @@
 #legend {
     font-family: Arial, sans-serif;
     background: #fff;
-    padding: 10px;
-    color: black; 
-    margin: 10px;
+    max-width: 19%;
+    padding: .5em;
+    color: black;
+    font-size:.8em;
+    margin: 1em;
     border: 3px solid #000;
   }
 
