marker conten added

--- a/public/styles/map.css
+++ b/public/styles/map.css
@@ -1,5 +1,14 @@
 #map {
   margin: 10%;
   padding: 25% 0;
-  /*border: 10px solid red;*/
+}
+.markerContent h1{
+  font-size: 2em;
+}
+.markerContent h2{
+  font-size: 1em;
+}
+.inspection {
+  color: red;
+  margin-top: 2px;
 }
