--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -89,11 +89,19 @@
 
 footer {
   display: inline;
-  margin-top: 6em;
+  margin-top: 10em;
 }
 #map {
   width: 100%;
   height: auto;
+}
+
+#kingLogo {
+  display: inline;
+  float: right;
+  width: 60px;
+  height: auto;
+  position: relative;
 }
 
 
