--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -71,10 +71,13 @@
 
 #floating-panel {
   width: 100%;
-  display: inline;
-  margin: 0 20%;
-  text-align: center;
+  margin: 0 20% 0 20%;
   margin-bottom: -10px;
+  text-decoration: none;
+}
+#floating-panel li{
+  display: block;
+
 }
 
 #floating-panel input {
@@ -128,6 +131,10 @@ footer {
 
   #map {
     width: 80%;
+  }
+
+  #floating-panel li {
+    display: inline;
   }
 
 }
